--- a/class26-materials/HomeWork/AutomaticCarousel/index.html
+++ b/class26-materials/HomeWork/AutomaticCarousel/index.html
@@ -16,11 +16,10 @@
 		<input type="text" name="" value="">
 		<button type="button" name="button">Get Cocktail</button>
 
-        <div class="container">
+		<img src="" alt="">
+        <!-- <div class="container">
             
-        </div>
-		<button class="move-left">Left</button>
-        <button class="move-right">Right</button>
+        </div> -->
 
 		<script type="text/javascript" src="script.js"></script>
 	</body>
