--- a/class8-materials/Day-08_07-hair-salon-ajmal-khan/index.html
+++ b/class8-materials/Day-08_07-hair-salon-ajmal-khan/index.html
@@ -20,7 +20,7 @@
             <i class="fa-solid fa-bars"></i>
             <span>Saba Azeem</span>
         </div>
-        <nav>
+        <nav class="display-none">
             <a href="#">Home</a>
             <a href="#">About</a>
             <a href="#">Services</a>
@@ -28,17 +28,17 @@
             <a href="#">News</a>
             <a href="#">Contact</a>
         </nav>
-        <button>- Book Online</button>
+        <button class="header-btn display-none">- Book Online</button>
     </header>
             <!-- section-1  -->
     <section class="sec1">
         <section class="text">
-        <h1>Blonde & Highlight</h1>
-        <h5>Divide Your Uniquness By your hairs in Tyle</h5>
-        <button>- Our services</button>
-        <i class="fa-solid fa-arrow-left"></i>
-        <i class="fa-solid fa-arrow-right"></i>
-    </section>
+            <h1>Blonde & Highlight</h1>
+            <h5>Divide Your Uniquness By your hairs in Tyle</h5>
+            <button>- Our services</button>
+            <i class="fa-solid fa-arrow-left arrow"></i>
+            <i class="fa-solid fa-arrow-right arrow"></i>
+        </section>
     </section>
 
                 <!-- card -->
@@ -49,7 +49,7 @@
     </section>
 
                 <!-- section-2  -->
-    <section class="sec2">
+    <section class="sec2 pad">
         <section class="sec2sub">
             <h3>Expert Beauticians
             </h3>
@@ -67,7 +67,7 @@
         </section>
     </section>
         <!-- section-3  -->
-    <section class="sec3">
+    <section class="sec3 pad">
         <section class="sec3sub1 sub">
             <h2>Make your own momentum</h2>
             <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Architecto, velit. Et harum omnis fugiat perferendis! Praesentium, impedit pariatur. Nostrum asperiores saepe rerum nesciunt, voluptate explicabo architecto pariatur necessitatibus dolorem magnam aspernatur numquam minima cupiditate ipsam tenetur autem dicta ad commodi consequuntur, delectus neque. Atque amet earum magnam ut! Magni, assumenda?</p>
@@ -79,7 +79,7 @@
     </section>
 
         <!-- section-4  -->
-    <section class="sec4">
+    <section class="sec4 pad">
         <section class="sub1">
             <img src="https://pbs.twimg.com/media/FLUCUfiXEB42VCS?format=jpg&name=small" alt="">
             <section class="sub2">
@@ -104,7 +104,7 @@
     </section>
 
             <!-- section-5  -->
-<section class="sec5">
+<section class="sec5 pad">
     <section class="sub">
         <h5>Colour day offer!</h5>
         <h2><span>-10%</span> on haircut color and highlight</h2>
@@ -118,18 +118,23 @@
 </section>
         <!-- section - 7 -->
 <section class="sec7">
+    <!-- <div class="bottom-images"> -->
     <img src="https://images.unsplash.com/photo-1522075469751-3a6694fb2f61?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8NHx8aGFpciUyMHNhbG9uJTIwaW1hZ2VzfGVufDB8fDB8fHww&auto=format&fit=crop&w=500&q=60" alt="">
     <img src="https://images.unsplash.com/photo-1438761681033-6461ffad8d80?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8OHx8aGFpciUyMHNhbG9uJTIwaW1hZ2VzfGVufDB8fDB8fHww&auto=format&fit=crop&w=500&q=60" alt="">
     <img src="https://images.unsplash.com/photo-1524250502761-1ac6f2e30d43?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8NXx8aGFpciUyMHNhbG9uJTIwaW1hZ2VzfGVufDB8fDB8fHww&auto=format&fit=crop&w=500&q=60" alt="">
+<!-- </div> -->
+    <!-- <div class="top-images"> -->
     <img src="https://images.unsplash.com/photo-1464863979621-258859e62245?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8MTB8fGhhaXIlMjBzYWxvbiUyMGltYWdlc3xlbnwwfHwwfHx8MA%3D%3D&auto=format&fit=crop&w=500&q=60" alt="">
     <img src="https://images.unsplash.com/photo-1529626455594-4ff0802cfb7e?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8MTJ8fGhhaXIlMjBzYWxvbiUyMGltYWdlc3xlbnwwfHwwfHx8MA%3D%3D&auto=format&fit=crop&w=500&q=60" alt="">
     <img src="https://images.unsplash.com/photo-1470259078422-826894b933aa?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8MTR8fGhhaXIlMjBzYWxvbiUyMGltYWdlc3xlbnwwfHwwfHx8MA%3D%3D&auto=format&fit=crop&w=500&q=60" alt="">
-    <img src="https://images.unsplash.com/photo-1488426862026-3ee34a7d66df?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8OXx8aGFpciUyMHNhbG9uJTIwaW1hZ2VzfGVufDB8fDB8fHww&auto=format&fit=crop&w=500&q=60" alt="">
-    <!-- <img src="https://plus.unsplash.com/premium_photo-1664476481155-e5f8967e48e5?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8MTN8fGhhaXIlMjBzYWxvbiUyMGltYWdlc3xlbnwwfHwwfHx8MA%3D%3D&auto=format&fit=crop&w=500&q=60" alt=""> -->
+<!-- </div> -->
+    <!-- <img src="https://images.unsplash.com/photo-1488426862026-3ee34a7d66df?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8OXx8aGFpciUyMHNhbG9uJTIwaW1hZ2VzfGVufDB8fDB8fHww&auto=format&fit=crop&w=500&q=60" alt="">
+    <img src="https://plus.unsplash.com/premium_photo-1664476481155-e5f8967e48e5?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8MTN8fGhhaXIlMjBzYWxvbiUyMGltYWdlc3xlbnwwfHwwfHx8MA%3D%3D&auto=format&fit=crop&w=500&q=60" alt="">
     <img src="https://images.unsplash.com/photo-1494790108377-be9c29b29330?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8MTd8fGhhaXIlMjBzYWxvbiUyMGltYWdlc3xlbnwwfHwwfHx8MA%3D%3D&auto=format&fit=crop&w=500&q=60" alt="">
     <img src="https://images.unsplash.com/photo-1504439904031-93ded9f93e4e?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8MTV8fGhhaXIlMjBzYWxvbiUyMGltYWdlc3xlbnwwfHwwfHx8MA%3D%3D&auto=format&fit=crop&w=500&q=60" alt="">
-    <img src="https://images.unsplash.com/photo-1494354145959-25cb82edf23d?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8MjB8fGhhaXIlMjBzYWxvbiUyMGltYWdlc3xlbnwwfHwwfHx8MA%3D%3D&auto=format&fit=crop&w=500&q=60" alt="">
+    <img src="https://images.unsplash.com/photo-1494354145959-25cb82edf23d?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8MjB8fGhhaXIlMjBzYWxvbiUyMGltYWdlc3xlbnwwfHwwfHx8MA%3D%3D&auto=format&fit=crop&w=500&q=60" alt=""> -->
 </section>
+
 <script src="js/script.js"></script>
 </body>
 </html>
