--- a/class38-materials/class38-materials/client-side-code/index.html
+++ b/class38-materials/class38-materials/client-side-code/index.html
@@ -9,7 +9,9 @@
     <h1>Simple Site To Consume An API on Button Click</h1>
     <button>Click Me</button>
     <input type="text">
-    <h2>Result: </h2>
+    <p>Name: <span class="name"></span></p>
+    <p>Class: <span class="class"></span></p>
+    <p>Age: <span class="age"></span></p>
 
     <script src='js/main.js'></script>
 </body>
