--- a/class8-materials/Day-08_03-BBC/index.html
+++ b/class8-materials/Day-08_03-BBC/index.html
@@ -55,21 +55,21 @@
 
         <section class="main-articles row">
             <div>
-              <article>
+              <article id="article-1">
                 <h3>Saba Lorem ipsum dolor sit amet consectetur adipisicing elit.</h3>
                 <span>Lorem, ipsum.</span>
               </article>
-              <article>
+              <article id="article-2">
                 <h3>Lorem ipsum dolor sit amet consectetur adipisicing elit.</h3>
                 <span>Lorem, ipsum.</span>
               </article>
             </div>
             <div>
-              <article>
+              <article id="article-3">
                 <h3>Lorem ipsum dolor sit amet consectetur adipisicing elit.</h3>
                 <span>Lorem, ipsum.</span>
               </article>
-              <article>
+              <article id="article-4">
                 <h3>Saba Lorem ipsum dolor sit amet consectetur adipisicing elit.</h3>
                 <span>Lorem, ipsum.</span>
               </article>
@@ -80,20 +80,20 @@
     <h2 class="container">News</h2>
     <section class="sec-2 row container">
         
-        <article>
-          <div class="bottom-img"></div>
+        <article >
+          <div class="bottom-img" id="article-5"></div>
           <h3>Lorem ipsum dolor sit amet consectetur adipisicing elit.</h3>
           <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Placeat nemo reiciendis animi sit non at.</p>
           <span>Lorem, ipsum.</span>
         </article>
-        <article>
-          <div class="bottom-img"></div>
+        <article >
+          <div class="bottom-img" id="article-6"></div>
           <h3>Lorem ipsum dolor sit amet consectetur adipisicing elit.</h3>
           <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Placeat nemo reiciendis animi sit non at.</p>
           <span>Lorem, ipsum.</span>
         </article>
-        <article>
-          <div class="bottom-img"></div>
+        <article >
+          <div class="bottom-img" id="article-7"></div>
           <h3>Lorem ipsum dolor sit amet consectetur adipisicing elit.</h3>
           <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Placeat nemo reiciendis animi sit non at.</p>
           <span>Lorem, ipsum.</span>
